# easy_direct_composition

./: CMakeLists.txt  README.md  easy_direct_composition.h
examples/: basic_example.cpp
src/: dc_env.cpp  dc_env.h  dc_surface.cpp  dc_surface.h  obj_helper.cpp  obj_helper.h  obj_tree.c  obj_tree.h
